fixed alignments

--- a/src/views/sequence/chars/SequenceChars.scss
+++ b/src/views/sequence/chars/SequenceChars.scss
@@ -2,8 +2,7 @@
 @import "~tools.scss";
 
 .wrapper {
-  // overflow-y: scroll;
-  padding: rem(15);
+  
 }
 
 .title {
